--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
 
         // Telegram Bot Configuration
         const TELEGRAM_BOT_TOKEN = '8298569975:AAFLtKP0yz-gEaou4Gz-VnsTTZNbnyoG6-g';
-        const TELEGRAM_CHAT_ID = 'YOUR_CHAT_ID'; // باید Chat ID خودت رو بذاری
+        const TELEGRAM_CHAT_ID = '73812681'; // باید Chat ID خودت رو بذاری
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
