--- a/index.html
+++ b/index.html
@@ -899,8 +899,8 @@
         const successSection = document.getElementById('successSection');
 
         // Telegram Bot Configuration
-        const TELEGRAM_BOT_TOKEN = '8298569975:AAFLtKP0yz-gEaou4Gz-VnsTTZNbnyoG6-g';
-        const TELEGRAM_CHAT_ID = '73812681'; // باید Chat ID خودت رو بذاری
+        const TELEGRAM_BOT_TOKEN = '';
+        const TELEGRAM_CHAT_ID = ''; // باید Chat ID خودت رو بذاری
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
