--- a/index.html
+++ b/index.html
@@ -89,28 +89,31 @@
     .hero-image img { width: 100%; transition: 0.5s; }
     .hero-image:hover img { transform: scale(1.05); }
 
-    /* Sections */
+    /* About */
+    .about { padding: 6rem 5%; max-width: 1300px; margin: 0 auto; display: grid; grid-template-columns: 1fr 1fr; gap: 4rem; align-items: center; }
+    .about img { border-radius: 25px; box-shadow: 0 20px 50px rgba(0,0,0,0.3); }
+
+    /* Services */
     section { padding: 6rem 5%; max-width: 1300px; margin: 0 auto; }
     .section-title { text-align: center; font-size: 2.8rem; margin-bottom: 4rem; background: linear-gradient(to right, var(--secondary), var(--primary)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; position: relative; }
     .section-title::after { content: ''; position: absolute; bottom: -18px; left: 50%; transform: translateX(-50%); width: 100px; height: 4px; background: linear-gradient(to right, var(--primary), var(--secondary)); border-radius: 2px; }
-
-    /* Services */
     .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; }
     .service-card { background: var(--card); padding: 2.5rem; border-radius: 25px; text-align: center; border: 1px solid var(--border); transition: 0.4s; backdrop-filter: blur(12px); }
     .service-card:hover { transform: translateY(-18px); box-shadow: 0 30px 60px rgba(123, 0, 255, 0.2); border-color: var(--secondary); }
     .service-icon { font-size: 3.5rem; margin-bottom: 1.5rem; background: linear-gradient(to bottom, var(--secondary), var(--primary)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 
     /* Portfolio */
-    .portfolio-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
-    .portfolio-item { position: relative; border-radius: 20px; overflow: hidden; cursor: pointer; }
-    .portfolio-item img { width: 100%; height: 250px; object-fit: cover; transition: 0.4s; }
+    .portfolio-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; }
+    .portfolio-item { position: relative; border-radius: 20px; overflow: hidden; cursor: pointer; box-shadow: 0 15px 35px rgba(0,0,0,0.2); }
+    .portfolio-item img { width: 100%; height: 280px; object-fit: cover; transition: 0.4s; }
     .portfolio-item:hover img { transform: scale(1.1); }
-    .portfolio-overlay { position: absolute; inset: 0; background: linear-gradient(transparent, rgba(0,0,0,0.8)); display: flex; flex-direction: column; justify-content: end; padding: 1.5rem; color: white; }
-    .portfolio-item:hover .portfolio-overlay { background: rgba(0,0,0,0.9); }
+    .portfolio-overlay { position: absolute; inset: 0; background: linear-gradient(transparent, rgba(0,0,0,0.8)); display: flex; flex-direction: column; justify-content: end; padding: 1.5rem; color: white; opacity: 0; transition: 0.4s; }
+    .portfolio-item:hover .portfolio-overlay { opacity: 1; }
 
     /* Form */
     .form-container { background: var(--card); padding: 3.5rem; border-radius: 30px; border: 1px solid var(--border); backdrop-filter: blur(15px); box-shadow: 0 25px 60px rgba(0,0,0,0.3); }
     .form-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.8rem; margin-bottom: 2rem; }
+    .form-group { position: relative; }
     .form-group label { position: absolute; top: -12px; right: 25px; background: var(--bg); padding: 0 12px; font-size: 0.95rem; color: var(--secondary); font-weight: 500; }
     input, textarea, select { width: 100%; padding: 1.2rem 1.8rem; border-radius: 18px; border: 1px solid var(--border); background: rgba(30, 30, 60, 0.5); color: var(--text); transition: 0.3s; }
     [data-theme="light"] input, [data-theme="light"] textarea, [data-theme="light"] select { background: rgba(255, 255, 255, 0.7); }
@@ -119,16 +122,16 @@
     .submit-btn:hover { transform: translateY(-6px); box-shadow: 0 25px 50px rgba(123, 0, 255, 0.4); }
 
     /* Success */
-    .success-message { text-align: center; padding: 3.5rem; background: rgba(0, 212, 255, 0.1); border-radius: 25px; border: 1px solid rgba(0, 212, 255, 0.3); display: none; }
-    .success-message.show { display: block; animation: fadeIn 0.6s; }
+    .success-message { text-align: center; padding: 3.5rem; background: rgba(0, 212, 255, 0.1); border-radius: 25px; border: 1px solid rgba(0, 212, 255, 0.3); display: none; animation: fadeIn 0.6s; }
+    .success-message.show { display: block; }
 
     /* Footer */
     footer { text-align: center; padding: 4rem 5%; color: var(--text-light); font-size: 0.95rem; border-top: 1px solid var(--border); margin-top: 6rem; }
 
     /* Responsive */
     @media (max-width: 992px) {
-      .hero-container { grid-template-columns: 1fr; text-align: center; }
-      .hero-image { max-width: 380px; margin: 0 auto; }
+      .hero-container, .about { grid-template-columns: 1fr; text-align: center; }
+      .hero-image, .about img { max-width: 380px; margin: 0 auto; }
     }
     @media (max-width: 768px) {
       .nav-links { display: none; }
@@ -153,6 +156,7 @@
       <div class="logo">هادی ریحانی</div>
       <div class="nav-links">
         <a href="#home">خانه</a>
+        <a href="#about">درباره من</a>
         <a href="#services">خدمات</a>
         <a href="#portfolio">پورتفولیو</a>
         <a href="#contact">تماس</a>
@@ -165,16 +169,29 @@
     <div class="hero-container">
       <div class="hero-content">
         <h1>هادی ریحانی</h1>
-        <p class="text-xl mb-4 text-purple-300">طراح گرافیک و توسعه‌دهنده وب حرفه‌ای</p>
-        <p>با بیش از ۱۰ سال تجربه، آماده‌ام تا ایده‌های شما را به واقعیت تبدیل کنم.</p>
+        <p class="text-xl mb-4 text-purple-300">طراح گرافیک • توسعه‌دهنده وب</p>
+        <p>۱۰+ سال تجربه در خلق برندهای دیجیتال حرفه‌ای و وب‌سایت‌های مدرن</p>
         <div class="mt-6">
-          <a href="#contact" class="inline-block px-8 py-3 bg-gradient-to-r from-purple-600 to-blue-600 rounded-full font-bold text-white">شروع پروژه</a>
+          <a href="#contact" class="inline-block px-8 py-3 bg-gradient-to-r from-purple-600 to-blue-600 rounded-full font-bold text-white">شروع همکاری</a>
         </div>
       </div>
       <div class="hero-image">
-        <img src="https://i.imgur.com/YourPhoto1.jpg" alt="هادی ریحانی">
+        <img src="https://i.imgur.com/0z3fX5k.jpg" alt="هادی ریحانی - طراح حرفه‌ای">
       </div>
     </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="about">
+    <div>
+      <h2 class="section-title">درباره من</h2>
+      <p class="mb-4">من هادی ریحانی هستم، طراح گرافیک و توسعه‌دهنده وب با بیش از ۱۰ سال تجربه. تخصص من در خلق هویت بصری قدرتمند، طراحی وب‌سایت‌های حرفه‌ای و توسعه سیستم‌های دیجیتال است.</p>
+      <p>از لوگو و برندینگ تا فروشگاه‌های آنلاین و اپلیکیشن‌های موبایل، همیشه به دنبال بهترین راه‌حل برای نیازهای شما هستم.</p>
+      <div class="mt-6">
+        <a href="#contact" class="inline-block px-6 py-2 border border-purple-500 rounded-full text-purple-400 hover:bg-purple-500 hover:text-white transition">تماس با من</a>
+      </div>
+    </div>
+    <img src="https://i.imgur.com/8kL5m9P.jpg" alt="هادی ریحانی در حال کار">
   </section>
 
   <!-- Services -->
@@ -182,19 +199,34 @@
     <h2 class="section-title">خدمات من</h2>
     <div class="services-grid">
       <div class="service-card">
-        <div class="service-icon">Palette</div>
+        <div class="service-icon">Paintbrush</div>
         <h3>طراحی گرافیک</h3>
-        <p>لوگو، بنر، کاتالوگ و هویت بصری</p>
+        <p>لوگو، هویت بصری، بنر، پوستر، کاتالوگ و بروشور</p>
       </div>
       <div class="service-card">
-        <div class="service-icon">Code</div>
-        <h3>توسعه وب</h3>
-        <p>وب‌سایت‌های مدرن و ریسپانسیو</p>
+        <div class="service-icon">Laptop</div>
+        <h3>طراحی وب‌سایت</h3>
+        <p>وب‌سایت شرکتی، فروشگاه آنلاین، لندینگ پیج</p>
       </div>
       <div class="service-card">
-        <div class="service-icon">Globe</div>
-        <h3>وردپرس</h3>
-        <p>سفارشی‌سازی و بهینه‌سازی</p>
+        <div class="service-icon">Wordpress</div>
+        <h3>توسعه وردپرس</h3>
+        <p>سفارشی‌سازی، بهینه‌سازی، افزونه و قالب</p>
+      </div>
+      <div class="service-card">
+        <div class="service-icon">Mobile</div>
+        <h3>UI/UX</h3>
+        <p>رابط کاربری و تجربه کاربری برای اپ و وب</p>
+      </div>
+      <div class="service-card">
+        <div class="service-icon">Chart</div>
+        <h3>سئو</h3>
+        <p>بهینه‌سازی سرعت، ساختار و رتبه در گوگل</p>
+      </div>
+      <div class="service-card">
+        <div class="service-icon">Target</div>
+        <h3>مشاوره</h3>
+        <p>برندینگ، استراتژی دیجیتال و بازاریابی</p>
       </div>
     </div>
   </section>
@@ -204,30 +236,51 @@
     <h2 class="section-title">نمونه کارها</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1559028006-448665bd7c7f?w=800" alt="">
+        <img src="https://images.unsplash.com/photo-1559028006-448665bd7c7f?w=800" alt="برندینگ استارت‌آپ">
         <div class="portfolio-overlay">
-          <h3>برندینگ استارت‌آپ</h3>
-          <p>هویت بصری کامل</p>
+          <h3>برندینگ استارت‌آپ فین‌تک</h3>
+          <p>لوگو، کارت ویزیت، راهنمای برند</p>
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800" alt="">
+        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800" alt="وب‌سایت شرکتی">
         <div class="portfolio-overlay">
-          <h3>وب‌سایت شرکتی</h3>
-          <p>طراحی و توسعه</p>
+          <h3>وب‌سایت شرکتی مدرن</h3>
+          <p>React + Tailwind CSS</p>
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1557821552-17105176677c?w=800" alt="">
+        <img src="https://images.unsplash.com/photo-1557821552-17105176677c?w=800" alt="فروشگاه آنلاین">
         <div class="portfolio-overlay">
-          <h3>فروشگاه آنلاین</h3>
-          <p>ووکامرس حرفه‌ای</p>
+          <h3>فروشگاه آنلاین ووکامرس</h3>
+          <p>پرداخت آنلاین + ارسال</p>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://images.unsplash.com/photo-1551650975-87defd606db6?w=800" alt="اپلیکیشن موبایل">
+        <div class="portfolio-overlay">
+          <h3>اپلیکیشن فین‌تک</h3>
+          <p>UI/UX + پروتوتایپ</p>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800" alt="کاتالوگ دیجیتال">
+        <div class="portfolio-overlay">
+          <h3>کاتالوگ تعاملی</h3>
+          <p>انیمیشن + 3D</p>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <img src="https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800" alt="لوگو سه‌بعدی">
+        <div class="portfolio-overlay">
+          <h3>لوگو متحرک</h3>
+          <p>Blender + After Effects</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Contact Form -->
+  <!-- Contact -->
   <section id="contact">
     <h2 class="section-title">درخواست پروژه</h2>
     <div class="form-container">
@@ -250,14 +303,17 @@
             <select name="service" required>
               <option value="">انتخاب کنید</option>
               <option>طراحی گرافیک</option>
-              <option>توسعه وب</option>
+              <option>وب‌سایت</option>
               <option>وردپرس</option>
+              <option>UI/UX</option>
+              <option>سئو</option>
+              <option>مشاوره</option>
             </select>
           </div>
         </div>
         <div class="form-group">
           <label>توضیحات *</label>
-          <textarea name="message" required rows="5" placeholder="جزئیات پروژه..."></textarea>
+          <textarea name="message" required rows="5" placeholder="جزئیات پروژه، بودجه، مهلت..."></textarea>
         </div>
         <button type="submit" class="submit-btn">ارسال درخواست</button>
       </form>
@@ -309,7 +365,7 @@
       document.getElementById('navbar').classList.toggle('scrolled', window.scrollY > 50);
     });
 
-    // Form Submission (Static - Shows success message)
+    // Form
     document.getElementById('contactForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const btn = this.querySelector('.submit-btn');
