--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>هادی ریحانی | طراح گرافیک و توسعه‌دهنده وب</title>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <!-- GSAP + ScrollTrigger -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
   <style>
     :root {
       --bg: #0a0a1a;
@@ -32,9 +35,26 @@
       color: var(--text);
       line-height: 1.8;
       transition: all 0.4s;
-      background-image: radial-gradient(circle at 10% 20%, rgba(123, 0, 255, 0.08), transparent 20%), radial-gradient(circle at 90% 80%, rgba(0, 212, 255, 0.08), transparent 20%);
+      overflow-x: hidden;
+      position: relative;
     }
     html { scroll-behavior: smooth; }
+
+    /* Floating Background */
+    .bg-float {
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      pointer-events: none; z-index: -1;
+      background: radial-gradient(circle at 20% 80%, rgba(123, 0, 255, 0.1), transparent 40%),
+                  radial-gradient(circle at 80% 20%, rgba(0, 212, 255, 0.1), transparent 40%);
+    }
+    .float-circle {
+      position: absolute;
+      border-radius: 50%;
+      background: linear-gradient(135deg, var(--primary), var(--secondary));
+      opacity: 0.1;
+      filter: blur(40px);
+    }
 
     /* Theme Toggle */
     .theme-toggle {
@@ -54,7 +74,7 @@
       cursor: pointer;
       transition: all 0.3s;
     }
-    .theme-toggle:hover { transform: translateY(-3px); }
+    .theme-toggle:hover { transform: translateY(-3px) scale(1.05); }
 
     /* Navbar */
     .navbar {
@@ -83,20 +103,25 @@
     .hero { min-height: 100vh; display: flex; align-items: center; padding: 0 5%; position: relative; overflow: hidden; }
     .hero::before { content: ''; position: absolute; inset: 0; background: linear-gradient(135deg, rgba(123, 0, 255, 0.06), rgba(0, 212, 255, 0.06)); pointer-events: none; }
     .hero-container { max-width: 1300px; margin: 0 auto; display: grid; grid-template-columns: 1fr 1fr; gap: 4rem; align-items: center; z-index: 2; }
-    .hero-content h1 { font-size: 3.8rem; margin-bottom: 1rem; background: linear-gradient(to right, var(--secondary), var(--primary)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+    .hero-content h1 { font-size: 4.5rem; margin-bottom: 1rem; background: linear-gradient(to right, var(--secondary), var(--primary), var(--secondary)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-size: 200%; animation: gradient 3s ease infinite; }
+    @keyframes gradient { 0%,100%{background-position:0%} 50%{background-position:100%} }
     .hero-image { border-radius: 25px; overflow: hidden; box-shadow: 0 25px 60px rgba(0,0,0,0.4); transform: perspective(1000px) rotateY(-5deg); transition: 0.5s; }
     .hero-image:hover { transform: perspective(1000px) rotateY(0) translateY(-10px); }
     .hero-image img { width: 100%; transition: 0.5s; }
     .hero-image:hover img { transform: scale(1.05); }
 
-    /* About */
-    .about { padding: 6rem 5%; max-width: 1300px; margin: 0 auto; display: grid; grid-template-columns: 1fr 1fr; gap: 4rem; align-items: center; }
-    .about img { border-radius: 25px; box-shadow: 0 20px 50px rgba(0,0,0,0.3); }
+    /* Tilt Card */
+    .tilt-card { transition: transform 0.3s; }
+    .tilt-card:hover { transform: translateY(-10px) rotateX(5deg) rotateY(5deg); }
 
-    /* Services */
-    section { padding: 6rem 5%; max-width: 1300px; margin: 0 auto; }
+    /* Sections */
+    section { padding: 6rem 5%; max-width: 1300px; margin: 0 auto; opacity: 0; transform: translateY(50px); }
+    section.revealed { opacity: 1; transform: translateY(0); transition: all 1s ease; }
+
     .section-title { text-align: center; font-size: 2.8rem; margin-bottom: 4rem; background: linear-gradient(to right, var(--secondary), var(--primary)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; position: relative; }
     .section-title::after { content: ''; position: absolute; bottom: -18px; left: 50%; transform: translateX(-50%); width: 100px; height: 4px; background: linear-gradient(to right, var(--primary), var(--secondary)); border-radius: 2px; }
+
+    /* Services */
     .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; }
     .service-card { background: var(--card); padding: 2.5rem; border-radius: 25px; text-align: center; border: 1px solid var(--border); transition: 0.4s; backdrop-filter: blur(12px); }
     .service-card:hover { transform: translateY(-18px); box-shadow: 0 30px 60px rgba(123, 0, 255, 0.2); border-color: var(--secondary); }
@@ -119,30 +144,26 @@
     [data-theme="light"] input, [data-theme="light"] textarea, [data-theme="light"] select { background: rgba(255, 255, 255, 0.7); }
     input:focus, textarea:focus, select:focus { outline: none; border-color: var(--secondary); box-shadow: 0 0 25px rgba(0, 212, 255, 0.2); }
     .submit-btn { background: linear-gradient(135deg, var(--primary), var(--secondary)); color: white; border: none; padding: 1.3rem 3.5rem; border-radius: 50px; font-size: 1.2rem; font-weight: 600; cursor: pointer; transition: 0.4s; width: 100%; margin-top: 1.5rem; box-shadow: 0 12px 35px rgba(123, 0, 255, 0.3); }
-    .submit-btn:hover { transform: translateY(-6px); box-shadow: 0 25px 50px rgba(123, 0, 255, 0.4); }
+    .submit-btn:hover { transform: translateY(-6px) scale(1.02); box-shadow: 0 25px 50px rgba(123, 0, 255, 0.4); }
 
     /* Success */
-    .success-message { text-align: center; padding: 3.5rem; background: rgba(0, 212, 255, 0.1); border-radius: 25px; border: 1px solid rgba(0, 212, 255, 0.3); display: none; animation: fadeIn 0.6s; }
-    .success-message.show { display: block; }
+    .success-message { text-align: center; padding: 3.5rem; background: rgba(0, 212, 255, 0.1); border-radius: 25px; border: 1px solid rgba(0, 212, 255, 0.3); display: none; }
+    .success-message.show { display: block; animation: fadeIn 0.6s; }
 
     /* Footer */
     footer { text-align: center; padding: 4rem 5%; color: var(--text-light); font-size: 0.95rem; border-top: 1px solid var(--border); margin-top: 6rem; }
 
-    /* Responsive */
     @media (max-width: 992px) {
       .hero-container, .about { grid-template-columns: 1fr; text-align: center; }
       .hero-image, .about img { max-width: 380px; margin: 0 auto; }
-    }
-    @media (max-width: 768px) {
-      .nav-links { display: none; }
-      .hero-content h1 { font-size: 2.5rem; }
-      .section-title { font-size: 2.2rem; }
-      .form-grid { grid-template-columns: 1fr; }
     }
     @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
   </style>
 </head>
 <body data-theme="dark">
+
+  <!-- Floating Background -->
+  <div class="bg-float" id="bgFloat"></div>
 
   <!-- Theme Toggle -->
   <div class="theme-toggle" id="themeToggle">
@@ -156,7 +177,7 @@
       <div class="logo">هادی ریحانی</div>
       <div class="nav-links">
         <a href="#home">خانه</a>
-        <a href="#about">درباره من</a>
+        <a href="#about">درباره</a>
         <a href="#services">خدمات</a>
         <a href="#portfolio">پورتفولیو</a>
         <a href="#contact">تماس</a>
@@ -176,57 +197,41 @@
         </div>
       </div>
       <div class="hero-image">
-        <img src="https://i.imgur.com/0z3fX5k.jpg" alt="هادی ریحانی - طراح حرفه‌ای">
+        <img src="https://i.imgur.com/0z3fX5k.jpg" alt="هادی ریحانی">
       </div>
     </div>
   </section>
 
   <!-- About -->
-  <section id="about" class="about">
-    <div>
-      <h2 class="section-title">درباره من</h2>
-      <p class="mb-4">من هادی ریحانی هستم، طراح گرافیک و توسعه‌دهنده وب با بیش از ۱۰ سال تجربه. تخصص من در خلق هویت بصری قدرتمند، طراحی وب‌سایت‌های حرفه‌ای و توسعه سیستم‌های دیجیتال است.</p>
-      <p>از لوگو و برندینگ تا فروشگاه‌های آنلاین و اپلیکیشن‌های موبایل، همیشه به دنبال بهترین راه‌حل برای نیازهای شما هستم.</p>
-      <div class="mt-6">
-        <a href="#contact" class="inline-block px-6 py-2 border border-purple-500 rounded-full text-purple-400 hover:bg-purple-500 hover:text-white transition">تماس با من</a>
+  <section id="about">
+    <div class="grid md:grid-cols-2 gap-8 items-center">
+      <div>
+        <h2 class="section-title">درباره من</h2>
+        <p class="mb-4">من هادی ریحانی هستم، طراح گرافیک و توسعه‌دهنده وب با بیش از ۱۰ سال تجربه. تخصص من در خلق هویت بصری قدرتمند، طراحی وب‌سایت‌های حرفه‌ای و توسعه سیستم‌های دیجیتال است.</p>
+        <p>از لوگو و برندینگ تا فروشگاه‌های آنلاین و اپلیکیشن‌های موبایل، همیشه به دنبال بهترین راه‌حل برای نیازهای شما هستم.</p>
       </div>
+      <img src="https://i.imgur.com/8kL5m9P.jpg" alt="هادی ریحانی در حال کار" class="rounded-3xl shadow-2xl">
     </div>
-    <img src="https://i.imgur.com/8kL5m9P.jpg" alt="هادی ریحانی در حال کار">
   </section>
 
   <!-- Services -->
   <section id="services">
     <h2 class="section-title">خدمات من</h2>
     <div class="services-grid">
-      <div class="service-card">
+      <div class="service-card tilt-card">
         <div class="service-icon">Paintbrush</div>
         <h3>طراحی گرافیک</h3>
         <p>لوگو، هویت بصری، بنر، پوستر، کاتالوگ و بروشور</p>
       </div>
-      <div class="service-card">
+      <div class="service-card tilt-card">
         <div class="service-icon">Laptop</div>
         <h3>طراحی وب‌سایت</h3>
         <p>وب‌سایت شرکتی، فروشگاه آنلاین، لندینگ پیج</p>
       </div>
-      <div class="service-card">
+      <div class="service-card tilt-card">
         <div class="service-icon">Wordpress</div>
         <h3>توسعه وردپرس</h3>
         <p>سفارشی‌سازی، بهینه‌سازی، افزونه و قالب</p>
-      </div>
-      <div class="service-card">
-        <div class="service-icon">Mobile</div>
-        <h3>UI/UX</h3>
-        <p>رابط کاربری و تجربه کاربری برای اپ و وب</p>
-      </div>
-      <div class="service-card">
-        <div class="service-icon">Chart</div>
-        <h3>سئو</h3>
-        <p>بهینه‌سازی سرعت، ساختار و رتبه در گوگل</p>
-      </div>
-      <div class="service-card">
-        <div class="service-icon">Target</div>
-        <h3>مشاوره</h3>
-        <p>برندینگ، استراتژی دیجیتال و بازاریابی</p>
       </div>
     </div>
   </section>
@@ -236,45 +241,24 @@
     <h2 class="section-title">نمونه کارها</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1559028006-448665bd7c7f?w=800" alt="برندینگ استارت‌آپ">
+        <img src="https://images.unsplash.com/photo-1559028006-448665bd7c7f?w=800" alt="">
         <div class="portfolio-overlay">
           <h3>برندینگ استارت‌آپ فین‌تک</h3>
           <p>لوگو، کارت ویزیت، راهنمای برند</p>
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800" alt="وب‌سایت شرکتی">
+        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800" alt="">
         <div class="portfolio-overlay">
           <h3>وب‌سایت شرکتی مدرن</h3>
           <p>React + Tailwind CSS</p>
         </div>
       </div>
       <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1557821552-17105176677c?w=800" alt="فروشگاه آنلاین">
+        <img src="https://images.unsplash.com/photo-1557821552-17105176677c?w=800" alt="">
         <div class="portfolio-overlay">
           <h3>فروشگاه آنلاین ووکامرس</h3>
           <p>پرداخت آنلاین + ارسال</p>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1551650975-87defd606db6?w=800" alt="اپلیکیشن موبایل">
-        <div class="portfolio-overlay">
-          <h3>اپلیکیشن فین‌تک</h3>
-          <p>UI/UX + پروتوتایپ</p>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=800" alt="کاتالوگ دیجیتال">
-        <div class="portfolio-overlay">
-          <h3>کاتالوگ تعاملی</h3>
-          <p>انیمیشن + 3D</p>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <img src="https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800" alt="لوگو سه‌بعدی">
-        <div class="portfolio-overlay">
-          <h3>لوگو متحرک</h3>
-          <p>Blender + After Effects</p>
         </div>
       </div>
     </div>
@@ -305,9 +289,6 @@
               <option>طراحی گرافیک</option>
               <option>وب‌سایت</option>
               <option>وردپرس</option>
-              <option>UI/UX</option>
-              <option>سئو</option>
-              <option>مشاوره</option>
             </select>
           </div>
         </div>
@@ -341,28 +322,68 @@
     const icon = toggle.querySelector('i');
     const text = toggle.querySelector('span');
     toggle.addEventListener('click', () => {
-      if (body.getAttribute('data-theme') === 'dark') {
-        body.setAttribute('data-theme', 'light');
-        icon.classList.replace('fa-moon', 'fa-sun');
-        text.textContent = 'تم لایت';
-        localStorage.setItem('theme', 'light');
-      } else {
-        body.setAttribute('data-theme', 'dark');
-        icon.classList.replace('fa-sun', 'fa-moon');
-        text.textContent = 'تم دارک';
-        localStorage.setItem('theme', 'dark');
-      }
+      const isDark = body.getAttribute('data-theme') === 'dark';
+      body.setAttribute('data-theme', isDark ? 'light' : 'dark');
+      icon.classList.replace(isDark ? 'fa-moon' : 'fa-sun', isDark ? 'fa-sun' : 'fa-moon');
+      text.textContent = isDark ? 'تم لایت' : 'تم دارک';
+      localStorage.setItem('theme', isDark ? 'light' : 'dark');
     });
     const saved = localStorage.getItem('theme') || 'dark';
     body.setAttribute('data-theme', saved);
-    if (saved === 'light') {
-      icon.classList.replace('fa-moon', 'fa-sun');
-      text.textContent = 'تم لایت';
-    }
+    if (saved === 'light') { icon.classList.replace('fa-moon', 'fa-sun'); text.textContent = 'تم لایت'; }
 
     // Navbar Scroll
     window.addEventListener('scroll', () => {
       document.getElementById('navbar').classList.toggle('scrolled', window.scrollY > 50);
+    });
+
+    // Floating Background
+    const bgFloat = document.getElementById('bgFloat');
+    for (let i = 0; i < 6; i++) {
+      const circle = document.createElement('div');
+      circle.className = 'float-circle';
+      circle.style.width = circle.style.height = `${Math.random() * 300 + 100}px`;
+      circle.style.left = `${Math.random() * 100}%`;
+      circle.style.top = `${Math.random() * 100}%`;
+      circle.style.animation = `float ${15 + i * 5}s ease-in-out infinite`;
+      bgFloat.appendChild(circle);
+    }
+    const style = document.createElement('style');
+    style.textContent = `
+      @keyframes float {
+        0%, 100% { transform: translateY(0) rotate(0deg); }
+        50% { transform: translateY(-100px) rotate(180deg); }
+      }
+    `;
+    document.head.appendChild(style);
+
+    // Scroll Reveal + Parallax
+    gsap.registerPlugin(ScrollTrigger);
+    document.querySelectorAll('section').forEach(sec => {
+      gsap.to(sec, {
+        scrollTrigger: {
+          trigger: sec,
+          start: "top 80%",
+          onEnter: () => sec.classList.add('revealed')
+        }
+      });
+    });
+
+    // 3D Tilt on Cards
+    document.querySelectorAll('.tilt-card').forEach(card => {
+      card.addEventListener('mousemove', (e) => {
+        const rect = card.getBoundingClientRect();
+        const x = e.clientX - rect.left;
+        const y = e.clientY - rect.top;
+        const centerX = rect.width / 2;
+        const centerY = rect.height / 2;
+        const rotateX = (y - centerY) / 10;
+        const rotateY = (centerX - x) / 10;
+        card.style.transform = `perspective(1000px) rotateX(${rotateX}deg) rotateY(${rotateY}deg) translateZ(20px)`;
+      });
+      card.addEventListener('mouseleave', () => {
+        card.style.transform = '';
+      });
     });
 
     // Form
